plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'com.jfrog.bintray' version '1.8.4'
    id "com.jfrog.artifactory" version "4.13.0"

    id "io.github.krakowski.jextract" version "0.1.5"
}

compileJava {
    sourceCompatibility = '16'
    targetCompatibility = '16'
    options.encoding = 'UTF-8'
}

compileTestJava {
    sourceCompatibility = '16'
    targetCompatibility = '16'
    options.encoding = 'UTF-8'
}

group = 'de.hhu.bsinfo'
version = getProperty('projectVersion')

jextract {
    libraries = [ 'ucp' ]

    filters = [
        // OpenUCX
        'ucp/api', 'uct/api', 'ucs/debug/log', 'ucs/memory/memory',
        'ucs/type/status', 'ucs/type/thread', 'ucs/config/types',

        //
        'epoll', 'eventfd', 'fcntl', 'socket',
        'unistd', 'string', 'errno', 'inet', 'stdio'
    ]

    targetPackage = 'org.openucx'

    header = "${project.projectDir}/src/main/resources/ucx.h"

    sourceMode = true
}

dependencies {

    // Logging
    api 'org.slf4j:slf4j-api:1.7.26'

    // Annotations
    implementation 'org.jetbrains:annotations:17.0.0'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
    testImplementation 'org.assertj:assertj-core:3.11.1'
    testImplementation 'org.slf4j:slf4j-nop:1.7.28'
}

test {
    useJUnitPlatform()
    jvmArgs += ['-Dforeign.restricted=permit', '--add-modules', 'jdk.incubator.foreign']
}

apply from: 'gradle/publish.gradle'
apply from: 'gradle/bintray.gradle'
apply from: 'gradle/artifactory.gradle'